fix: raise nav bar z-index up to 20

--- a/storage/app/public/css/app.css
+++ b/storage/app/public/css/app.css
@@ -1,3 +1,6 @@
+nav {
+  z-index: 20;
+}
 .word-break {
     word-break: break-all;
     word-break: break-word;
